tests/parser/scripts/bar.m
potato = foo(12);

function y = foo(x)
  y = x;
end

kittens = 42; % Illegal
